--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 @import url('https://fonts.googleapis.com/css?family=Anton|Josefin+Sans:300|Luckiest+Guy|Open+Sans+Condensed:300|Open+Sans|Roboto+Condensed|Roboto|Source+Sans+Pro:400&display=swap');
 
 .header {
@@ -11,7 +12,7 @@
 }
 
 .layout {
-    margin-top: 4%;
+    margin-top: 20%;
     margin: auto;
     background-color: #ffff;
 }
@@ -104,4 +105,13 @@
 
   .socmed {
       margin: 0% 2.5%;
+  }
+
+  .container {
+      padding: 0px !important;
+      margin: 0px !important;
+  }
+
+  .modal-text {
+      font-family: 'Open Sans';
   }
