--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -7,8 +7,9 @@
 }
 
 .footer {
-    text-align: center;
+    text-align: left;
     font-size: 12px;
+    background-color: #ffffffe3;
 }
 
 .layout {
@@ -45,11 +46,13 @@
     font-family: 'Open Sans';
     font-size: 120px;
     font-weight: 999;
+    color: black;
 }
 
 .intro {
     font-family: 'Roboto';
     text-align: justify;
+    color: black;
 }
 
 .about-me {
@@ -67,6 +70,10 @@
     background-color: white;
 }
 
+.card-projects {
+    height: 250px;
+}
+
 .center-pos {
     float: inherit;
     transform: translate(0%, 0%);
@@ -74,11 +81,16 @@
 }
 
 .shadow {
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3) !important;
+    transition: 0.3s;
+}
+
+.shadow:hover {
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3) !important;
 }
 
 .shadow-layout {
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 }
 
 /* For demo */
@@ -104,7 +116,7 @@
   }
 
   .socmed {
-      margin: 0% 2.5%;
+      margin: 0% 0.5%;
   }
 
   .container {
