--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -9,7 +9,8 @@
 .footer {
     text-align: left;
     font-size: 12px;
-    background-color: #ffffffe3;
+    /* background-color: #ffffffe3; */
+    background-color: #f0f2f5;
 }
 
 .layout {
@@ -60,7 +61,7 @@
     text-align: center;
     font-family: 'Roboto Bold';
     font-size: 40px;
-    color: #fff;
+    color: #000000;
 }
 
 .card {
