--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -182,3 +182,21 @@
 .appImg {
     width: 100%;
 }
+
+.center-pos {
+    float: inherit;
+    transform: translate(0%, 0%);
+    width: 60%;
+}
+
+.car-img-height {
+    height: 500px;
+    width: 100%;
+    background-repeat:no-repeat;
+    background-size:cover;
+}
+
+.car-img-div {
+    display: flex;
+    justify-content: center;
+}
