--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -81,7 +81,7 @@
 .intro-text {
     font-family: 'Lexend Deca';
     color: black;
-    font-size: 16px;
+    font-size: 1.2vw;
     display: inline-block;
     text-align: justify;
     text-justify: inter-word;
